Agregue arrays y objetos en el codigo de javascript

--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
             <div class="row my-5">
                 <div class="col ">
                     <article>
-                        <img src="https://cdn.shopify.com/s/files/1/1429/6260/products/DAWNFMPLANETEE_800x.png?v=1642780477" alt="T-Shirt" title="T-Shirt" width="300px"/>
-                        <p>Dawn FM Plane Tee<br />
+                        <a href="./pages/product.html">
+                            <img src="https://cdn.shopify.com/s/files/1/1429/6260/products/DAWNFMPLANETEE_800x.png?v=1642780477" alt="T-Shirt" title="T-Shirt" width="300px"/>
+                        </a>
+                            <p>Dawn FM Plane Tee<br />
                         $ 30</p>
                         <button type="button" class="btn btn-sm btn-outline-dark">+ Add to cart</button>
                     </article>
