--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8"/>
     <title>The Weeknd | Merch</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <!-- CSS only -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;1,300&display=swap" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous"/>
+    <link rel="icon" href="images/logo.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<meta name="keywords" content="the, weeknd, abel, tesfaye, merch, merchandise, shop, store, music" /> 
 	<meta name="description" content="This is The Weeknd's official merchandise and music online store" />
     <script src="https://kit.fontawesome.com/e27ba4cf9e.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="images/logo.png" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-white border-bottom border-dark sticky-top">
+        <nav class="navbar navbar-expand-lg bg-white border-bottom border-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
                     <img src="./images/the-wknd.png" alt="Logo" title="Logo" width="170px">
@@ -26,138 +27,31 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-                    <ul class="navbar-nav mx-5">
-                        <li class="nav-item mx-3">
-                            <a class="nav-link text-black active" aria-current="page" href="#">All</a>
-                        </li>
-                        <li class="nav-item mx-3">
-                            <a class="nav-link text-black" href="#">Hoodies</a>
-                        </li>
-                        <li class="nav-item mx-3">
-                            <a class="nav-link text-black" href="#">Shirts</a>
-                        </li>
-                        <li class="nav-item mx-3">
-                            <a class="nav-link text-black" href="#">Music</a>
-                        </li>
+                    <ul class="categories navbar-nav mx-5">
+                        <li id="all" class="nav-item mx-3 filter-btn">All</li>
+                        <li id="hoodies" class="nav-item mx-3 filter-btn">Hoodies</li>
+                        <li id="shirts" class="nav-item mx-3 filter-btn">Shirts</li>
+                        <li id="music" class="nav-item mx-3 filter-btn">Music</li>
                     </ul>
                     <div>
-                        <a href="#"><i class="fa-regular fa-user fa-lg mx-3"></i></a>
-                        <a href="#"><i class="fa-solid fa-cart-shopping fa-lg mx-3"></i></a>
+                        <button type="button" class="btn button px-0">
+                            <i id="user" class="fa-regular fa-user fa-lg mx-3"></i>
+                        </button>
+                        <button type="button" class="btn button px-0">
+                            <i id="cart" class="fa-solid fa-cart-shopping fa-lg mx-3"></i>
+                        </button>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
     <main>
-        <div class="container-fluid text-center">
-            <div class="row my-5">
-                <div class="col ">
-                    <article>
-                        <a href="./pages/product.html">
-                            <img src="https://cdn.shopify.com/s/files/1/1429/6260/products/DAWNFMPLANETEE_800x.png?v=1642780477" alt="T-Shirt" title="T-Shirt" width="300px"/>
-                        </a>
-                            <p>Dawn FM Plane Tee<br />
-                        $ 30</p>
-                        <button type="button" class="btn btn-sm btn-outline-dark">+ Add to cart</button>
-                    </article>
-                </div>
-                <div class="col ">
-                    <article>
-                        <img src="https://cdn.shopify.com/s/files/1/1429/6260/products/DFM-SOLAR-LS-BLACK-FRONT_800x.png?v=1641073242" alt="Longsleeve" title="Longsleeve" width="300px"/>
-                        <p>Dawn FM Longsleeve Tee<br />
-                        $ 30</p>
-                        <button type="button" class="btn btn-sm btn-outline-dark">+ Add to cart</button>
-                    </article>
-                </div>
-                <div class="col ">
-                    <article>
-                        <img src="https://cdn.shopify.com/s/files/1/1429/6260/products/XO-CHROME-LOGO-PULLOVER-HOOD_bf9e5811-2cb1-4819-aa0d-4f5f131ae1df_800x.png?v=1651004473" alt="Hoodie" title="Hoodie" width="300px"/>
-                        <p>Dawn FM Logo Hoodie<br />
-                        $ 78</p>
-                        <button type="button" class="btn btn-sm btn-outline-dark">+ Add to cart</button>
-                    </article>
-                </div>
-                <div class="col ">
-                    <article>
-                        <img src="https://cdn.shopify.com/s/files/1/1429/6260/products/DFM-COVER-HOODIE-BLACK-BACK_800x.png?v=1641073302" alt="Hoodie" title="Hoodie" width="300px"/>
-                        <p>Dawn FM Cover Hoodie <br />
-                        $ 78</p>
-                        <button type="button" class="btn btn-sm btn-outline-dark">+ Add to cart</button>
-                    </article>
-                </div>
-            </div>
-            <div class="row my-5">
-                <div class="col ">
-                    <article>
-                        <img src="https://cdn.shopify.com/s/files/1/1429/6260/products/DFM-CHROME-TITLE-CREWNECK-BLACK-FRONT_800x.png?v=1641073319" alt="Crewneck" title="Crewneck" width="300px"/>
-                        <p>Dawn FM Logo Crewneck<br />
-                        $ 58</p>
-                        <button type="button" class="btn btn-sm btn-outline-dark">+ Add to cart</button>
-                    </article>
-                </div>
-                <div class="col ">
-                    <article>
-                        <img src="https://cdn.shopify.com/s/files/1/1429/6260/products/DFMCOLLECTORS02FRONT_800x.png?v=1641073211" alt="CD" title="CD" width="300px"/>
-                        <p>Dawn FM CD <br />
-                        $ 15</p>
-                        <button type="button" class="btn btn-sm btn-outline-dark">+ Add to cart</button>
-                    </article>
-                </div>
-                <div class="col ">
-                    <article>
-                        <img src="https://cdn.shopify.com/s/files/1/1429/6260/products/DFMCOLLECTORS01CSFRONT_593ddedb-39db-4d6c-a9ce-92423b143ce1_800x.png?v=1641073329" alt="Cassette" title="Cassette" width="300px"/>
-                        <p>Dawn FM Cassette<br />
-                        $ 8</p>
-                        <button type="button" class="btn btn-sm btn-outline-dark">+ Add to cart</button>
-                    </article>
-                </div>
-                <div class="col ">
-                    <article>
-                        <img src="https://cdn.shopify.com/s/files/1/1429/6260/products/DFM-CREWNECK-BLACK-FRONT_800x.png?v=1641073286" alt="Crewneck" title="Crewneck" width="300px"/>
-                        <p>Dawn FM Crewneck ERA<br />
-                        $ 58</p>
-                        <button type="button" class="btn btn-sm btn-outline-dark">+ Add to cart</button>
-                    </article>
-                </div>
-            </div>
-            <div class="row my-5">
-                <div class="col ">
-                    <article>
-                        <img src="https://cdn.shopify.com/s/files/1/1429/6260/products/TheWeeknd_TheHighlights_StandardD2C-Front_2_800x.png?v=1632860374" alt="Vinyl" title="Vinyl" width="300px"/>
-                        <p>Dawn FM Vinyl Hits<br />
-                        $ 22</p>
-                        <button type="button" class="btn btn-sm btn-outline-dark">+ Add to cart</button>
-                    </article>
-                </div>
-                <div class="col ">
-                    <article>
-                        <img src="https://cdn.shopify.com/s/files/1/1429/6260/products/DFM-HOODIE-BLACK-BACK_440x.png?v=1641073269" alt="Hoodie" title="Hoodie" width="300px"/>
-                        <p>Dawn FM Radio Hoodie<br />
-                        $ 78</p>
-                        <button type="button" class="btn btn-sm btn-outline-dark">+ Add to cart</button>
-                    </article>
-                </div>
-                <div class="col ">
-                    <article>
-                        <img src="https://cdn.shopify.com/s/files/1/1429/6260/products/DFM-CHROME-TITLE-TEE-BLACK-FRONT_300x.png?v=1641073307" alt="T-Shirt" title="T-Shirt" width="300px"/>
-                        <p>Dawn FM Chrome Tee<br />
-                        $ 30</p>
-                        <button type="button" class="btn btn-sm btn-outline-dark">+ Add to cart</button>
-                    </article>
-                </div>
-                <div class="col ">
-                    <article>
-                        <img src="https://cdn.shopify.com/s/files/1/1429/6260/products/DAWNFMALTERNATEWORLDDIGITALALBUMARTcopy_800x.png?v=1650487441" alt="CD" title="CD" width="300px"/>
-                        <p>Dawn FM CD Remixes<br />
-                        $ 15</p>
-                        <button type="button" class="btn btn-sm btn-outline-dark">+ Add to cart</button>
-                    </article>
-                </div>
-            </div>
+        <div class="container-fluid">
+            <div id="content" class="row"></div>
         </div>
     </main>
     <footer>
-        <div class="my-4 border-top border-dark">
+        <div class="mt-4 border-top border-dark">
             <div class="socials">
                 <a href="https://www.instagram.com/theweeknd/" target="_blank"><i class="fa-brands fa-instagram fa-xl mx-3"></i></a>
             </div>
@@ -173,6 +67,7 @@
         </div>
     </footer>
     <script src="./scripts/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <!-- JavaScript Bundle with Popper -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
