--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         </nav>
     </header>
     <main>
-        <div class="container-fluid">
-            <div id="content" class="row"></div>
+        <div class="container-fluid text-center">
+            <div id="content" class="row">
+            </div>
         </div>
     </main>
     <footer>
