--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>The Weeknd | Merch</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <!-- CSS only -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,17 +30,39 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
                     <ul class="categories navbar-nav mx-5">
                         <li id="all" class="nav-item mx-3 filter-btn">All</li>
-                        <li id="hoodies" class="nav-item mx-3 filter-btn">Hoodies</li>
-                        <li id="shirts" class="nav-item mx-3 filter-btn">Shirts</li>
-                        <li id="music" class="nav-item mx-3 filter-btn">Music</li>
+                        <li id="hoodies" class="nav-item mx-3 filter-btn hoodies">Hoodies</li>
+                        <li id="shirts" class="nav-item mx-3 filter-btn shirts">Shirts</li>
+                        <li id="music" class="nav-item mx-3 filter-btn music">Music</li>
                     </ul>
-                    <div>
-                        <button type="button" class="btn button px-0">
+                    <div class="navbar-nav">
+                        <button class="btn ">
                             <i id="user" class="fa-regular fa-user fa-lg mx-3"></i>
                         </button>
-                        <button type="button" class="btn button px-0">
+                        <!-- Trigger modal -->
+                        <button type="button" class="btn position-relative me-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
                             <i id="cart" class="fa-solid fa-cart-shopping fa-lg mx-3"></i>
+                            <span class="mt-2 position-absolute translate-middle badge text-bg-light">0</span>
                         </button>
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-scrollable ">
+                                <div class="modal-content rounded-0 border-dark">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Shopping bag</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="container-fluid">
+                                            <p>Your bag is empty!</p>
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cotinue shopping</button>
+                                        <button type="button" class="btn btn-dark">Buy now</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -67,8 +90,10 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="./scripts/filter.js"></script>
     <script src="./scripts/main.js"></script>
-    <!-- JavaScript Bundle with Popper -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
