--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;1,300&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="icon" href="images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<meta name="keywords" content="the, weeknd, abel, tesfaye, merch, merchandise, shop, store, music" /> 
@@ -28,7 +28,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-                    <ul class="categories navbar-nav mx-5">
+                    <ul id="categories" class=" navbar-nav mx-5">
                         <li id="all" class="nav-item mx-3 filter-btn">All</li>
                         <li id="hoodies" class="nav-item mx-3 filter-btn hoodies">Hoodies</li>
                         <li id="shirts" class="nav-item mx-3 filter-btn shirts">Shirts</li>
@@ -39,26 +39,27 @@
                             <i id="user" class="fa-regular fa-user fa-lg mx-3"></i>
                         </button>
                         <!-- Trigger modal -->
-                        <button type="button" class="btn position-relative me-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            <i id="cart" class="fa-solid fa-cart-shopping fa-lg mx-3"></i>
-                            <span class="mt-2 position-absolute translate-middle badge text-bg-light">0</span>
+                        <button type="button" id="cart" class="btn cart-btn position-relative me-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            <i class="fa-solid fa-cart-shopping fa-lg mx-3"></i>
+                            <span id="cart-quantity" class="mt-2 position-absolute translate-middle badge text-bg-light">0</span>
                         </button>
                         <!-- Modal -->
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog modal-dialog-scrollable ">
+                            <div class="modal-dialog modal-dialog-scrollable">
                                 <div class="modal-content rounded-0 border-dark">
                                     <div class="modal-header">
                                         <h1 class="modal-title fs-5" id="exampleModalLabel">Shopping bag</h1>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <div class="container-fluid">
-                                            <p>Your bag is empty!</p>
+                                        <div id="cart-body" class="container-fluid">
+                                        </div>
+                                        <div id="total-amount">
                                         </div>
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cotinue shopping</button>
-                                        <button type="button" class="btn btn-dark">Buy now</button>
+                                        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cotinue shopping</button>
+                                        <button type="button" id="buy-btn" class="btn buy btn-outline-dark">Buy now</button>
                                     </div>
                                 </div>
                             </div>
@@ -94,6 +95,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./scripts/filter.js"></script>
+    <script src="./scripts/cart.js"></script>
     <script src="./scripts/main.js"></script>
 </body>
 </html>
