--- a/payment.html
+++ b/payment.html
@@ -41,11 +41,11 @@
                     <form action="/" method="post">
                         <div class="d-flex flex-column  my-3">
                             <label for="given-name">*First Name</label>
-                            <input id="name" type="text" autocomplete="given-name" required/>
+                            <input id="user-name" type="text" autocomplete="given-name" required/>
                         </div>
                         <div class="d-flex flex-column my-3">
                             <label>*Last Name</label>
-                            <input type="text" autocomplete="family-name" required/>
+                            <input id="last-name" type="text" autocomplete="family-name" required/>
                         </div>
                         <div class="d-flex flex-column my-3">
                             <label>*Email</label>
@@ -53,11 +53,7 @@
                         </div>
                         <div class="d-flex flex-column my-3">
                             <label for="street-address">*Adress</label>
-                            <input type="text" autocomplete="street-address" required/>
-                        </div>
-                        <div class="d-flex flex-column my-3">
-                            <label>Apt/Suite</label>
-                            <input type="text" />
+                            <input id="adress" type="text" autocomplete="street-address" required/>
                         </div>
                         <div class="d-flex flex-column my-3">
                             <div class="row">
@@ -73,30 +69,30 @@
                                 </div>
                                 <div  class="col">
                                     <label for="city">*City</label>
-                                    <input type="text" autocomplete="home city" required class="w-100"/>
+                                    <input id="city" type="text" autocomplete="home city" required class="w-100"/>
                                 </div>
                                 <div  class="col">
                                     <label for="postal-code">*Zip Code</label>
-                                    <input type="text" autocomplete="postal-code" required class="w-100"/>
+                                    <input id="zip-code" type="text" autocomplete="postal-code" required class="w-100"/>
                                 </div>
                             </div>
                         </div>
                         <div class="d-flex flex-column my-3">
                             <label>*Card Number</label>
-                            <input type="numer" required/>
+                            <input id="card-number" type="numer" required/>
                         </div>
                         <div class="row">
                             <div class="col">
                                 <label>*Name on card</label>
-                                <input type="text" required>
+                                <input id="card-name" type="text" required>
                             </div>
                             <div  class="col">
                                 <label>*Expiration</label>
-                                <input type="text" placeholder="MMYY" required class="w-100" minlength="4" maxlength="4"/>
+                                <input id="expiration" type="text" placeholder="MMYY" required class="w-100" minlength="4" maxlength="4"/>
                             </div>
                             <div  class="col">
                                 <label>*Security Code</label>
-                                <input type="text" class="w-100" required/>
+                                <input id="sec-code" type="text" class="w-100" required/>
                             </div>
                         </div>
                         <div class="text-end mt-5">
