--- a/payment.html
+++ b/payment.html
@@ -38,61 +38,72 @@
             <div class="row justify-content-around">
                 <div class="col-5 mx-3">
                     <h2>Contact Information</h2>
-                    <form action="/" method="post">
-                        <div class="d-flex flex-column  my-3">
-                            <label for="given-name">*First Name</label>
-                            <input id="user-name" type="text" autocomplete="given-name" required/>
+                    <form action="index.html" method="post" id="form-checkout">
+                        <div class="d-flex flex-column my-3">
+                            <label for="given-name" >*First Name</label>
+                            <input id="first-name" class="" type="text" autocomplete="given-name"/>
+                            <div class="error"></div>
                         </div>
                         <div class="d-flex flex-column my-3">
                             <label>*Last Name</label>
-                            <input id="last-name" type="text" autocomplete="family-name" required/>
+                            <input id="last-name" type="text" autocomplete="family-name"/>
+                            <div class="error"></div>
                         </div>
                         <div class="d-flex flex-column my-3">
                             <label>*Email</label>
-                            <input id="email" type="email" autocomplete="email" required/>
+                            <input id="email" type="email" autocomplete="email"/>
+                            <div class="error"></div>
                         </div>
                         <div class="d-flex flex-column my-3">
                             <label for="street-address">*Adress</label>
-                            <input id="adress" type="text" autocomplete="street-address" required/>
+                            <input id="adress" type="text" autocomplete="street-address" />
+                            <div class="error"></div>
                         </div>
                         <div class="d-flex flex-column my-3">
                             <div class="row">
                                 <div class="col">
                                     <label for="country-name">*Country</label>
-                                    <select name="country" id="country" class="w-100" autocapitalize="country-name" required>
+                                    <select name="country" id="country" class="w-100" autocapitalize="country-name">
                                         <option value="" disabled selected>SELECT A COUNTRY</option>
                                         <option value="europe">EUROPE</option>
                                         <option value="united states">UNITED STATES</option>
                                         <option value="asia">ASIA</option>
                                         <option value="argentina">ARGENTINA</option>
                                     </select>
+                                    <div class="error"></div>
                                 </div>
                                 <div  class="col">
                                     <label for="city">*City</label>
-                                    <input id="city" type="text" autocomplete="home city" required class="w-100"/>
+                                    <input id="city" type="text" autocomplete="home city"  class="w-100"/>
+                                    <div class="error"></div>
                                 </div>
                                 <div  class="col">
                                     <label for="postal-code">*Zip Code</label>
-                                    <input id="zip-code" type="text" autocomplete="postal-code" required class="w-100"/>
-                                </div>
+                                    <input id="zip-code" type="text" autocomplete="postal-code" class="w-100"/>
+                                    <div class="error"></div>
+                                    </div>
                             </div>
                         </div>
                         <div class="d-flex flex-column my-3">
                             <label>*Card Number</label>
-                            <input id="card-number" type="numer" required/>
+                            <input id="card-number" type="numer" minlength="12" maxlength="16"/>
+                            <div class="error"></div>
                         </div>
                         <div class="row">
                             <div class="col">
                                 <label>*Name on card</label>
-                                <input id="card-name" type="text" required>
+                                <input id="card-name" type="text">
+                                <div class="error"></div>
                             </div>
                             <div  class="col">
                                 <label>*Expiration</label>
-                                <input id="expiration" type="text" placeholder="MMYY" required class="w-100" minlength="4" maxlength="4"/>
+                                <input id="expiration" type="text" placeholder="MMYY" class="w-100" minlength="4" maxlength="4"/>
+                                <div class="error"></div>
                             </div>
                             <div  class="col">
                                 <label>*Security Code</label>
-                                <input id="sec-code" type="text" class="w-100" required/>
+                                <input id="sec-code" type="number" class="w-100" />
+                                <div class="error"></div>
                             </div>
                         </div>
                         <div class="text-end mt-5">
